# Kingsmerchant

./: .gitignore  Cargo.toml  LICENSE-MIT  PRD.md  README.md  build
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
assets/: INSTALL.md  install.sh  poe2ddd.desktop
assets/tray/: icon16.argb  icon22.argb  icon24.argb  icon32.argb  icon48.argb  icon64.argb  regen.sh
crates/overlay/: Cargo.toml
crates/overlay-spike/: Cargo.toml
crates/overlay-spike/src/: main.rs
crates/overlay/src/: handlers.rs  input_map.rs  lib.rs  main.rs  surface.rs
crates/parser/: Cargo.toml
crates/parser/examples/: dbg_parse.rs  parse_stdin.rs
crates/parser/src/: item.txt  lib.rs  model.rs  parse.rs
crates/parser/tests/: snapshots.rs
crates/parser/tests/items/: augment_idol.txt  augment_rune.txt  currency_alloy.txt  currency_breach_splinter.txt  currency_catalyst.txt  currency_distilled.txt  currency_omen.txt  currency_verisium.txt  inscribed_ultimatum.txt  magic_jewel.txt  magic_life_flask.txt  magic_quiver.txt  magic_spear.txt  meta_gem.txt  normal_body_armour_hybrid.txt  normal_body_armour_implicit.txt  rare_body_armour.txt  rare_boots.txt  rare_bow_fractured_mirrored.txt  rare_helmet.txt  rare_jewel.txt  rare_quarterstaff.txt  relic_unidentified.txt  skill_gem.txt  skill_gem_double_requires.txt  tablet_abyss.txt  tablet_abyss_rare_chests.txt  uncut_skill_gem.txt  unique_belt_mageblood.txt  unique_charm.txt  unique_gloves.txt  unique_helmet.txt  unique_mana_flask.txt  unique_ring_mirrored.txt  waystone_tier15.txt  waystone_tier16_corrupted.txt
crates/parser/tests/snapshots/: snapshots__parses_real_item_fixtures@augment_idol.txt.snap  snapshots__parses_real_item_fixtures@augment_rune.txt.snap  snapshots__parses_real_item_fixtures@breachstone.txt.snap  snapshots__parses_real_item_fixtures@currency_alloy.txt.snap  snapshots__parses_real_item_fixtures@currency_breach_splinter.txt.snap  snapshots__parses_real_item_fixtures@currency_catalyst.txt.snap  snapshots__parses_real_item_fixtures@currency_distilled.txt.snap  snapshots__parses_real_item_fixtures@currency_essence.txt.snap  snapshots__parses_real_item_fixtures@currency_omen.txt.snap  snapshots__parses_real_item_fixtures@currency_vaal_orb.txt.snap  snapshots__parses_real_item_fixtures@currency_verisium.txt.snap  snapshots__parses_real_item_fixtures@expedition_logbook.txt.snap  snapshots__parses_real_item_fixtures@gem_support.txt.snap  snapshots__parses_real_item_fixtures@inscribed_ultimatum.txt.snap  snapshots__parses_real_item_fixtures@magic_focus.txt.snap  snapshots__parses_real_item_fixtures@magic_jewel.txt.snap  snapshots__parses_real_item_fixtures@magic_life_flask.txt.snap  snapshots__parses_real_item_fixtures@magic_quiver.txt.snap  snapshots__parses_real_item_fixtures@magic_relic.txt.snap  snapshots__parses_real_item_fixtures@magic_spear.txt.snap  snapshots__parses_real_item_fixtures@magic_two_hand_mace.txt.snap  snapshots__parses_real_item_fixtures@magic_wand.txt.snap  snapshots__parses_real_item_fixtures@map_fragment.txt.snap  snapshots__parses_real_item_fixtures@meta_gem.txt.snap  snapshots__parses_real_item_fixtures@normal_amulet_enhancement.txt.snap  snapshots__parses_real_item_fixtures@normal_body_armour_hybrid.txt.snap  snapshots__parses_real_item_fixtures@normal_body_armour_implicit.txt.snap  snapshots__parses_real_item_fixtures@normal_bow.txt.snap  snapshots__parses_real_item_fixtures@normal_tablet.txt.snap  snapshots__parses_real_item_fixtures@pinnacle_key_fragment.txt.snap  snapshots__parses_real_item_fixtures@rare_amulet.txt.snap  snapshots__parses_real_item_fixtures@rare_belt.txt.snap  snapshots__parses_real_item_fixtures@rare_body_armour.txt.snap  snapshots__parses_real_item_fixtures@rare_boots.txt.snap  snapshots__parses_real_item_fixtures@rare_bow_corrupted.txt.snap  snapshots__parses_real_item_fixtures@rare_bow_fractured_mirrored.txt.snap  snapshots__parses_real_item_fixtures@rare_gloves_fractured.txt.snap  snapshots__parses_real_item_fixtures@rare_helmet.txt.snap  snapshots__parses_real_item_fixtures@rare_helmet_emdash.txt.snap  snapshots__parses_real_item_fixtures@rare_jewel.txt.snap  (+28 more)
crates/platform/: Cargo.toml
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: clipboard.rs  inject.rs  input.rs  lib.rs  tray.rs  window.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs
crates/platform/src/: lib.rs
crates/trade-api/: Cargo.toml
crates/trade-api/examples/: price_check.rs
crates/trade-api/src/: client.rs  definitions.rs  error.rs  exchange.rs  http.rs  impersonate.rs  lib.rs  model.rs  poeprices.rs  price.rs  query.rs  rate_limit.rs  scout.rs  stat_text.rs
crates/trade-api/tests/: client_flow.rs  poeprices.rs  query_builder.rs  rate_limit.rs  response_parser.rs  stat_mapping.rs
crates/trade-api/tests/fixtures/api/: README.md  data_items.json  data_stats.json  poeprices_declined.json  scout_leagues.json  search_response_real.json
crates/trade-api/tests/snapshots/: query_builder__detailed_query_snapshot.snap  query_builder__magic_wand_query_snapshot.snap  query_builder__rare_ring_query_snapshot.snap
crates/ui/: Cargo.toml
crates/ui/src/: config.rs  lib.rs  main.rs  model.rs  query.rs  watchers.rs
crates/ui/src/view/: actions.rs  exchange.rs  filters.rs  item_card.rs  listings.rs  mod.rs  settings.rs  theme.rs
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  PUBLISHING.md  kingsmerchant.install  poe2ddd.install
packaging/arch/pkg/kingsmerchant/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/src/Kingsmerchant-0.9.2/: rustfmt.toml
packaging/arch/src/Kingsmerchant-0.9.2/.github/workflows/: ci.yml
packaging/arch/src/Kingsmerchant-0.9.2/app/: Cargo.toml
packaging/arch/src/Kingsmerchant-0.9.2/assets/: install.sh  kingsmerchant.desktop
packaging/arch/src/Kingsmerchant-0.9.2/assets/tray/: icon16.argb  icon48.argb  regen.sh
packaging/arch/src/Kingsmerchant-0.9.2/crates/overlay/: Cargo.toml
packaging/arch/src/Kingsmerchant-0.9.2/crates/overlay/src/: handlers.rs  input_map.rs  lib.rs  main.rs  surface.rs
(+100 files in other folders)
