[workspace]
resolver = "2"
members = [
    "app",
    "crates/parser",
    "crates/platform-linux",
    "crates/trade-api",
    "crates/ui",
    "crates/overlay",
]
# Plain `cargo run` launches the app (the `poe2ddd` overlay binary) instead of
# erroring on which of the workspace's binaries to run.
default-members = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0-or-later"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
