[package]
name = "kingsmerchant"
version = "0.12.1"
description = "Native POE2 price-check overlay for KDE Plasma 6 Wayland."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "kingsmerchant"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
overlay = { path = "../crates/overlay" }
