[package]
name = "overlay"
version = "0.4.8"
description = "wlr-layer-shell overlay that drives the kingsmerchant price-check UI."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

# Glue between the windowing/GL layer (smithay-client-toolkit + glutin EGL +
# egui_glow) and the reused `ui` draw code: platform crates stay free of egui,
# and `ui` stays free of Wayland.

[[bin]]
name = "kingsmerchant-overlay"
path = "src/main.rs"

[dependencies]
ui = { path = "../ui" }
platform = { path = "../platform" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
egui = "0.34"
egui_glow = "0.34"
glow = "0.17"
glutin = { version = "0.32", default-features = false, features = ["egl", "wayland"] }
smithay-client-toolkit = "0.20"
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
raw-window-handle = "0.6"
