[package]
name = "parser"
version = "0.1.2"
description = "Parse POE2 'Copy Item' clipboard text into a structured item."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
regex = "1"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
