[package]
name = "platform-linux"
version = "0.5.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
evdev = "0.12"
# KDE/freedesktop StatusNotifierItem tray (PRD §4.9). The `blocking` feature
# gives a synchronous spawn()/Handle::update() so we don't need to drive it
# from an async context.
ksni = { version = "0.3", features = ["blocking"] }
