[package]
name = "trade-api"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
parser = { path = "../parser" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1"
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "test-util"] }
insta = { version = "1", features = ["json", "glob"] }
