[package]
name = "ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "poe2-ui"
path = "src/main.rs"

[dependencies]
parser = { path = "../parser" }
trade-api = { path = "../trade-api" }
platform-linux = { path = "../platform-linux" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
