[package]
name = "ui"
version = "0.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
parser = { path = "../parser" }
trade-api = { path = "../trade-api" }
platform-linux = { path = "../platform-linux" }
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
egui = "0.29"
egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
# Config hot-reload (PRD §4.8): watch config.json for external edits.
notify = "8"
