[package]
name = "ui"
version = "0.14.3"
description = "egui price-check UI for kingsmerchant, windowing-agnostic."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
parser = { path = "../parser" }
trade-api = { path = "../trade-api" }
platform = { path = "../platform" }
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
egui = "0.29"
egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
# egui_extras' image loader pulls `image` with NO format decoders, so item
# icons (PNGs from the POE2 CDN) failed with "image format Png is not
# supported". Depend on `image` directly to compile in the decoders we need
# (feature unification makes egui_extras use the same crate).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Config hot-reload: watch config.json for external edits.
notify = "8"
egui-phosphor = "0.7"
